--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "redux-persist-transform-filter": "^0.0.22",
+    "react-hook-form": "^7.29.0",
     "swiper": "^9.3.2",
     "swr": "^2.2.0",
     "tailwindcss": "3.3.2"
