--- a/package.json
+++ b/package.json
@@ -60,5 +60,11 @@
     "babel-plugin-import": "^1.13.8",
     "eslint-config-next": "13.4.12",
     "typescript": "5.2.2"
+  },
+  "pnpm": {
+    "install": {
+      "flags": "--frozen-lockfile"
+    }
   }
+  
 }
